The CategoryLogger had a private constructor and used a number of 'protected static final' fields that should be accessible from derived loggers. Since the CategoryLogger cannot be extended due to its private constructor, the protected fields are also not accessible, making it impossible to base new Loggers on the CategoryLogger. As a solution, the CategoryLogger has been turned into a Singleton, which can be extended.
In contrast with earlier implementations of the Event package, a sourceId is sent over the  network rather than a pointer to the source itself. This has several advantages:
- The object extending the EventProducer does not have to be Serializable itself
- There is no risk that the entire EventProducer object gets serialized (including subclasses) and is sent over the network
- The receiver of an event does not get a pointer to the sending object
- The receiver of an event is still able to identify the sending object